--- a/index.html
+++ b/index.html
@@ -15,9 +15,103 @@
 				<img src="assets/logo.png" alt="logo" class="navbar__logo"/>
 	 		</div>
 			<div class="navbar__nav__items">
-				<button class="nav__item">Order Food</button>
+				<button class="button__primary">Order Food</button>
 			</div>
 	 	</nav>
 	 </header>
+	 <main class="container">
+		 <!-- Hero Section -->
+	 	<section class="hero__container">
+	 		<div class="hero__image__container">
+				<img src="assets/hero.jpg" alt="hero image" class="hero__image">
+	 		</div>
+			<div class="hero__description">
+				<h1 class="hero__text">
+					Order food from favourite restaurants near you.
+				</h1>
+				<button class="hero__button button__primary">Order Now</button>
+			</div>
+	 	</section>
+		<br>
+		<!-- Explore menu -->
+		<section class="explore__menu__container">
+			<h1 class="explore__menu__text">Explore our menu</h1>
+			<div class="explore__menu__gradient__bg">	</div>
+			<div class="explore__menu__lists">
+				<!-- Burger -->
+				<div class="food__card">
+					<div class="food__card__image__container">
+						<img src="assets/burger.jpg" alt="burger" class="food__image">
+					</div>
+					<div class="food__card__description">
+						<h3 class="food__title">Burger</h3>
+						<p>Burger King, Mcdonalds, Burger Place <span style="color: red">+3</span></p>
+					</div>
+				</div>
+				<!-- Pizza -->
+				<div class="food__card" id="pizza__card">
+					<div class="food__card__image__container">
+						<img src="assets/pizza.jpg" alt="pizza" class="food__image">
+					</div>
+					<div class="food__card__description">
+						<h3 class="food__title">Pizza</h3>
+						<p>Pizza Hut, Domino's Pizza <span style="color: red">+3</span></p>
+					</div>
+				</div>
+				<!-- Ice Creams -->
+				<div class="food__card">
+					<div class="food__card__image__container">
+						<img src="assets/iceCream.jpg" alt="ice cream" class="food__image">
+					</div>
+					<div class="food__card__description">
+						<h3 class="food__title">Ice Creams</h3>
+						<p>Baskin Robins, Ibaco <span style="color: red">+3</span></p>
+					</div>
+				</div>
+			</div>
+			<div class="food__card__viewmore">
+				<button class="food__card__viewmore__button">View More</button>
+			</div>
+		</section>
+
+		<!-- Update section -->
+		<section class="stay__updated__container">
+			<h1 class="stay__updated__text">Stay Updated</h1>
+			<div class="email__updates">
+				<input type="email" class= email__input placeholder="email@email.com">
+				<button class="button__primary">Get Updates</button>
+			</div>
+		</section>
+
+		<!-- Quote Section -->
+		<section class="quote__container">
+			<div class="food__quote">
+				<img src="assets/restaurant0.jpg" alt="restaurant image" class="food__quote__image">
+				<h3 class="food__quote__text">
+					When a man's stomach is full it makes no difference whether he is rich or poor.
+				</h3>
+			</div>
+		</section>
+
+	 </main>
+
+
+		<!-- Footer -->
+		<footer class="footer">
+			<div class="footer__container">
+				<div class="footer__logo__container">
+					<img src="assets/logo.png" alt="logo" class="footer__logo">
+				</div>
+				<div class="footer__list__container">
+					<ul class="footer__list" style="list-style-type:none;">
+						<li>Pricing</li>
+						<li>Terms and condition</li>
+						<li>Partnership</li>
+						<li>Career</li>
+						<li>Contact</li>
+					</ul>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
